@startuml

skinparam monochrome true
skinparam packageStyle rect
skinparam defaultFontName FG Virgil
skinparam shadowing false

left to right direction

class CreateExamUI <<presntation>> {
    doShow()
}

class CreateExamController <<application>> {
    createExam(String, String)
}

class ExamManagementService <<service>> {
    createExam(String, CourseCode, User)
}

class AuthorizationService <<service>> {
    ensureAuthenticatedUserHasAnyOf(Role...)
    session()
}

class UserSession {
    authenticatedUser()
}


class "class:ExamTemplate" <<domain>> {
    ExamTemplate(ExamTitle, OpenDate, CloseDate, ExamDescription, FeedbackType, GradeType, Sections, Teacher, Students, Course)
}

class ExamBuilder <<build>> {
    build()
    with(ExamTitle, OpenDate, CloseDate, ExamDescription, FeedbackType, GradeType, Sections, Teacher, Students, Course)
}


class PersistenceContext <<persistence>> {
    repositories()
}

class RepositoryFactory <<factory>> {
    courses()
}

class ExamRepository <<repository>> {
    save(Exam)
}

CreateExamUI -> CreateExamController : theController
CreateExamController -> ExamManagementService : theService
ExamManagementService -> AuthorizationService : autzh
AuthorizationService -> UserSession : session
ExamManagementService -> ExamBuilder : theBuilder
ExamBuilder -> "class:ExamTemplate" : exam
ExamManagementService --> PersistenceContext : persistence
PersistenceContext --> RepositoryFactory : factory
RepositoryFactory --> ExamRepository : repository
ExamManagementService --> ExamRepository : repository

@enduml